# pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sast-energy-monitor" # Keep your chosen distribution name
version = "0.1.5"
authors = [
    { name="Yulin Chen", email="yulinchen@tudelft.nl" },
  { name="Ayush Kuruvilla", email="akuruvilla@tudelft.nl" },
  { name="Sahar Marossi", email="s.marossi@student.tudelft.nl" },
  { name="Andrea Onofrei", email="a.onofrei@tudelft.nl" },
]
description = "A CLI tool to measure energy consumption of Bandit and Semgrep scans using Energibridge."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities",
    "Topic :: System :: Monitoring",
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
]
keywords = ["energy", "consumption", "monitor", "bandit", "semgrep", "static analysis", "green software", "sustainable software", "energibridge", "cli"]
dependencies = [
  "colorama>=0.4.6", # Dependency for colored output
]

[tool.setuptools.packages.find]
where = ["src"]  # Look for packages in the src directory

[project.urls]
"Homepage" = "https://github.com/yulinchen03/SAST-energy-monitor"
"Bug Tracker" = "https://github.com/yulinchen03/SAST-energy-monitor/issues"
"Repository" = "https://github.com/yulinchen03/SAST-energy-monitor.git"

# Defines the command-line script entry point
[project.scripts]
# Script name (command to type) = package_name.module_name:function_name
# Use the *importable* package name (underscores) here for the path
# Suggest changing the command name to match the distribution name for clarity
# highlight-start
sast-energy-monitor = "sast_energy_monitor.cli:main"
# highlight-end

[tool.setuptools]
include-package-data = true

# Tells setuptools to include the config files when building the package
[tool.setuptools.package-data]
# Use the *importable* package name (underscores) here
# highlight-start
sast_energy_monitor = [
    "configs/.bandit",
    "configs/.bandit_basic",
    "configs/semgrep.yml",
]
# highlight-end